--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ p {
 <body>
 
   <div id="wrapper">
-    <h1>The colours of books</h1>
-    <h2>- Judging a book by its colours</h2>
+    <h1>The colors of books</h1>
+    <h2>- Judging a book by its colors</h2>
   </br>
     <div id="wrapper1">
       <div id="title1"><p>The little prince, Antoine de Saint-Exupéry 1943</p></div>
