--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
 
     <link rel='stylesheet' href='spectrum.css'/>
-    <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,300italic' rel='stylesheet' type='text/css'>
+    <!-- <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,300italic' rel='stylesheet' type='text/css'> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
     
@@ -20,7 +20,7 @@
 <style type="text/css">
 
 body {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Exo 2", "Helvetica Neue", Helvetica, sans-serif;
 }
 
 h2 {
@@ -32,10 +32,10 @@ p {
 }
 
 .tiny {
-  font-size: 11px;
+  font-size: 12px;
 }
 #wrapper {
-  width: 680px;
+  width: 690px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 40px;
@@ -96,7 +96,7 @@ max-width: 200px;
   height: 25px;
   font-family: "Helvetica Neue", Helvetica, sans-serif;
   font-size: 11pt;
-  border-width: 1px;
+  border-width: 1px #91765d;
   margin-left: 40px;
   padding-left: 10px;
   font-weight: 300;
@@ -110,13 +110,13 @@ max-width: 200px;
 <body>
 <div class=wrapper>
   <p class="tiny">
-    <input type='text' id="full" style=""/>  Color of the common words. Here set to #e71d36          
-    <input type='text' id="boxinput" class="input"/>  &nbsp; &nbsp; Height of the 'rows', here 10. (Press enter to change)
+    <input type='text' id="full" style=""/>  Color of the common words. Here set to #e71d36        
+    <input type='text' id="boxinput" class="input" placeholder='10'/>  &nbsp; &nbsp; Height of the 'rows'. (Press enter to change)
   </p>
 
   <p class="tiny">
     <input type='text' id="full2" style=""/>  Color of the complex words. Here set to #D2E4C4
-    <input type='text' id="widthinput" class="input"/>  &nbsp; &nbsp; Length of the boxes compared to height. 1 = square. (Press enter to change)
+    <input type='text' id="widthinput" class="input" placeholder='1'/>  &nbsp; &nbsp; Length of the boxes compared to height. 1 = square. (Press enter to change)
   </p>
 </div>
 
