--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ var group2B = makeG(svg2);
 var boxside = 1;
 var widthfactor = 20;
 var textadjust = 3;
-var commoncolor = "#E71D36";
+var commoncolor = "#64a344";
 var complexcolor = "#D2E4C4";
 
 
