--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="colorbrewer.js" type="text/javascript"></script>
     <script src="d3.min.js" charset="utf-8"></script>
     <script src='spectrum.js'></script>
+    <script src="thousand.js" type="text/javascript"></script>
     <script src="hundred.js" type="text/javascript"></script>
 
 <style type="text/css">
@@ -174,6 +175,8 @@ max-width: 200px;
 
 <script type="text/javascript">
 
+/// TOGGLES 
+
 $("#full").spectrum({
     color: "#d7b8e3",
     showInput: true,
@@ -293,6 +296,9 @@ $('#textsizeinput').keypress(function(event) {
       }
 });
 
+// END OF TOGGLES
+
+
 
 var margin = {top: 0, right: 20, bottom: 0, left: 20},
 width = 360 - margin.left - margin.right,
@@ -302,8 +308,8 @@ height = 5000 - margin.top - margin.bottom;
 
 // create an object of the common words: "Word" : index
 var commonObj = {};
-for (var i = 0; i < common.length; i++) {
-  commonObj[common[i]] = i;
+for (var i = 0; i < thousand1.length; i++) {
+  commonObj[thousand1[i]] = i;
 }
 
 
@@ -431,7 +437,7 @@ var bluetextrange = ["#335D93", "#6685AE", "#99AEC9", "#CCD6E4", "#CCD6E4" ];
 
 // Creates a linear color scale
 var bwcolor = d3.scale.linear()
-  .domain([ 0, common.length-1])
+  .domain([ 0, thousand1.length-1])
   .range(colorbrewer.Greys[2]);
 
 // Creates a linear opacity scale
@@ -441,12 +447,12 @@ var opacityscale = d3.scale.linear()
 
 // Creates a linear bluescale
 var commonBluescale = d3.scale.linear()
-  .domain([0, 0.25*common.length, 0.5*common.length, 0.75*common.length, common.length])
+  .domain([0, 0.25*thousand1.length, 0.5*thousand1.length, 0.75*thousand1.length, thousand1.length])
   .range(bluerange);
 
 // Creates a linear bluescale
 var blueText = d3.scale.linear()
-  .domain([0, 0.25*common.length, 0.5*common.length, 0.75*common.length, common.length])
+  .domain([0, 0.25*thousand1.length, 0.5*thousand1.length, 0.75*thousand1.length, thousand1.length])
   .range(bluetextrange);
 
 // D3 SVG and group layout
