five thousand words and toggles

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ max-width: 200px;
 
   <p class="tiny">
     <form id="radios">
-  <input type="radio" name="thousands" value="one">1000
+  <input type="radio" name="thousands" value="one" checked>1000
   <input type="radio" name="thousands" value="two">2000
   <input type="radio" name="thousands" value="three">3000
   <input type="radio" name="thousands" value="four">4000
